# temples

./: .gitignore  Cargo.toml  README.md
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/derive/tests/: macro_tests.rs
crates/nexcore/: Cargo.toml  build.rs
crates/nexcore/io/: Cargo.toml
crates/nexcore/io/src/: lib.rs
crates/nexcore/metadata/: Cargo.toml
crates/nexcore/metadata/src/: lib.rs
crates/nexcore/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: emitter.rs  io.rs  lib.rs  nexcore_manager.rs  value.rs  world.rs
crates/types/: Cargo.toml
crates/types/src/: action.rs  component.rs  event.rs  lib.rs  primitive.rs  resource.rs  schema.rs  system.rs  world.rs
crates/types/tests/: primitive_tests.rs
examples/counter/: .binpath  Cargo.toml  build.rs
examples/counter/components/: Cargo.toml
examples/counter/components/src/: counter.rs  lib.rs
examples/counter/metadata/: Cargo.toml
examples/counter/metadata/src/: lib.rs
examples/counter/src/: lib.rs  shemas.rs  systems.rs
examples/counter/state/: Cargo.toml
examples/counter/state/src/: lib.rs
examples/counter/systems/: Cargo.toml
examples/counter/systems/src/: counter.rs  lib.rs
examples/counter/tests/: counter_tests.rs
examples/counter/world/: Cargo.toml
examples/counter/world/src/: lib.rs  metadata.rs  state.rs
indexer/: Cargo.toml
indexer/src/: main.rs
storage/src/: lib.rs
tests/: .binpath  Cargo.toml  build.rs
tests/components/: Cargo.toml
tests/components/src/: lib.rs  value_primitives.rs  value_struct.rs
tests/metadata/: Cargo.toml
tests/metadata/src/: lib.rs
tests/src/: lib.rs
tests/tests/: value_tests.rs
types/: Cargo.toml
types/src/: component.rs  event.rs  lib.rs  primitive.rs  system.rs  utils.rs  world.rs
types/tests/: primitive_tests.rs
