[workspace.package]
name = "temples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "crates/derive",
    "crates/types",
    "crates/storage",
    "crates/nexcore",
    "indexer",
    "examples/counter",
    "tests",
]

[workspace.dependencies]
temple-storage = { path = "crates/storage" }
temple-types = { path = "crates/types" }
temple-derive = { path = "crates/derive" }

gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.1.1", features = ["debug"] }
gmeta = { git = "https://github.com/gear-tech/gear", tag = "v1.1.1" }
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.1.1" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.1.1" }
sp-core-hashing = { version = "10", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

