[package]
name = "temple-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { workspace = true }
gmeta = { workspace = true }
test-metadata = { path = "metadata" }
test-components = { path = "components" }
temple-storage = { workspace = true }
temple-types = { workspace = true }
scale-info = { workspace = true }

[dev-dependencies]
gtest = { workspace = true }

[build-dependencies]
test-metadata = { path = "metadata" }
gear-wasm-builder = { workspace = true }
