[package]
name = "temple-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
temple-storage = { path = "../storage" }
gstd = { workspace = true }
temple-types = { path = "../types" }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
quote = { version = "1.0.35", features = ["proc-macro"] }
syn = {version = "2.0.52", features = ["extra-traits", "full", "parsing", "proc-macro"] }
proc-macro2 = "1.0.56"
log = "0.4.21"
env_logger = "0.11.3"