[package]
name = "temple-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { version = "2", default-features = false }
log = "0.4.21"
env_logger = "0.11.3"