[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { workspace = true }
gmeta = { workspace = true }
temple-storage = { workspace = true }
temple-types = { workspace = true }
counter-metadata = { path = "metadata" }
counter-components = { path = "components" }
counter-systems = { path = "systems" }

[dev-dependencies]
gtest = { workspace = true }

[build-dependencies]
counter-metadata = { path = "metadata" }
gear-wasm-builder = { workspace = true }
