[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { workspace = true }
gmeta = { workspace = true }
temple-storage = { workspace = true }
temple-types = { workspace = true }
counter-world = { path = "world" }
counter-state = { path = "state" }
counter-components = { path = "components" }
counter-systems = { path = "systems" }

[dev-dependencies]
gtest = { workspace = true }

[build-dependencies]
counter-world = { path = "world" }
gear-wasm-builder = { workspace = true }
