[package]
name = "test-components"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { workspace = true }
gmeta = { workspace = true }
parity-scale-codec = { workspace = true }
temple-storage = { path = "../../storage" }
temple-types = { path = "../../types" }
scale-info = { version = "2", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
