[package]
name = "test-components"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { workspace = true }
gmeta = { workspace = true }
parity-scale-codec = { workspace = true }
temple-storage = { workspace = true }
temple-types = { workspace = true }
scale-info = { workspace = true }
lazy_static = { workspace = true }
