[package]
name = "counter-components"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { workspace = true }
gmeta = { workspace = true }
parity-scale-codec = { workspace = true }
temple-storage = { workspace = true }
temple-derive = { workspace = true }
temple-types = { workspace = true }
lazy_static = { workspace = true }
