[package]
name = "counter-state"
version = "0.1.0"
edition = "2021"

[dependencies]
#fungible-token-io.workspace = true
gstd = { workspace = true }
gmeta = { workspace = true, features = ["codegen"] }
parity-scale-codec = { workspace = true }
counter-world = { path = "../world" }

[build-dependencies]
gear-wasm-builder = { workspace = true, features = ["metawasm"] }
